fix: spacing

--- a/src/app/components/our-skills/our-skills.component.scss
+++ b/src/app/components/our-skills/our-skills.component.scss
@@ -45,7 +45,7 @@
 
 @media (max-width: 1199.98px) {
   .skills-container {
-    padding: 2rem 1rem;
+    padding: 5rem 1rem 0;
   }
 
   .skill {
