--- a/src/app/components/our-solutions/our-solutions.component.scss
+++ b/src/app/components/our-solutions/our-solutions.component.scss
@@ -142,10 +142,10 @@
 
 @media screen and (max-width: 991.98px) {
   .solution-container {
-    padding: 1rem;
+    padding: 4.75rem 1rem 0;
   }
   .solutions {
-    padding: 2rem 0;
+    padding: 0;
   }
   .accordion-wrapper {
     width: 100%;
